Removed debug endpoint and chunks count from another
